--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sse-react",
-    "version": "1.0.0",
+    "version": "1.2.0",
     "scripts": {
         "build-app": "webpack serve --config src/dev-script/webpack.js"
     },
@@ -13,6 +13,7 @@
         "@mui/material": "^7.2.0",
         "axios": "^1.7.9",
         "dotenv-webpack": "8.1.0",
+        "notistack": "^3.0.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-scripts": "5.0.1",
